# vault-keyring-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: python-publish.yml
src/: vault-keyring-client.py
src/vault_keyring_client/: main.py
vault_keyring_client/: main.py
