[project]
name = "vault-keyring-client"
version = "0.2.4"
description = ""
authors = [{name = "Jakob Guldberg Aaes", email = "jakob1379@gmail.com"}]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "typer>=0.16.1",
    "keyring>=25.6.0",
    "ansible>=11.9.0",
]

[project.urls]
Repository = "https://git@github.com/jakob1379/vault-keyring-client"
Issues = "https://github.com/jakob1379/vault-keyring-client/issues"
Changelog = "https://github.com/jakob1379/vault-keyring-client/blob/main/CHANGELOG.md"

[project.scripts]
vault-keyring-client = "vault_keyring_client.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "I", "F", "B", "N"]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
